# img-automation-app

./: .env.example  .gitignore  APP_DETAILS.md  APP_SKILL.md  CHROMIUM_AUTOMATION_CONNECT.md  CODEX_INSTRUCTIONS.md  GENERATION_MODES_SKILL.md  Img automation App Debug Portable.spec  Img automation App Debug.spec  Img automation App Portable.spec  Img automation App.spec  OPEN_APP.bat  README.md  REDESIGN_SPEC.md  SKILL.md  app.py  build_exe.ps1  outfit_swap_skill.md  package.json  pyinstaller.spec.template  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.ps1
.github/workflows/: ci.yml
backend/: config.py  constants.py
backend/modes/: __init__.py  base.py  character_json.py  image_to_video.py  json_to_natural.py  product_detail_shots.py  reference_pack.py  storyboard_unified.py
backend/prompts/: builder_prompts.py  critic_prompts.py  negative_prompts.py  outfit_swap.py  vision_prompts.py
backend/services/: _workflow_helpers.py  cache_keys.py  cache_service.py  cancellation.py  chatgpt_image_automation.py  chrome_profiles.py  image_preprocess.py  pollinations_client.py  (+1 more)
frontend/: app.js  history.js  i18n-runtime.js  i18n.js  index.html  modes.js  styles.css
relay/: README.md  cloudflare-worker.js  wrangler.toml
tests/: frontend-render-check.mjs  frontend-static-check.mjs  frontend-unit.mjs  test_backend.py  test_builder_targets.py  test_cache_service.py  test_chatgpt_image_automation.py  test_config.py  test_desktop_api.py  test_generic_modes.py  test_image_preprocess.py  test_mode_registry.py  test_mode_validators.py
tools/: build_specs.py
(+2 files in other folders)
