[project]
name = "img-automation-app"
version = "0.1.0"
description = "Desktop outfit-swap prompt builder (pywebview + Pollinations)."
requires-python = ">=3.13"
readme = "README.md"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["backend"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
